Buf Solve: null status changed to default status unverified and Form alignment changed from right to left

--- a/content.css
+++ b/content.css
@@ -2,7 +2,7 @@
     opacity:0.95;
     font-size:20px;
     top:200px;
-    right:50px;
+    left:50px;
     padding:10px;
     box-shadow: 0 0 1px 10px #d3cece;
     border-radius:20px;
